--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Usercentrics LCP Test</title>
+<title>Usercentrics Banner LCP Test</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
   body { margin:0; font-family:Arial, sans-serif; background:#111; color:#fff; }
   .hero {
     width:100%;
-    height:420px;
-    background:url('https://www.justwatch.com/appassets/img/home/global-home-bg-comp.avif') center/cover no-repeat;
+    height:60px; /* pequeno para garantir que NÃO é LCP */
+    background:#333;
   }
   .content {
     padding:20px;
@@ -32,9 +32,8 @@
 <div class="hero"></div>
 
 <div class="content">
-  <h1>Example LCP Test Page</h1>
-  <p>This page is designed to replicate the rendering behaviour of the client's site.<br>
-     It includes a large hero image above the fold and the Usercentrics CMP in its default configuration.</p>
+  <h1>Test page where CMP becomes the LCP</h1>
+  <p>This test ensures the Usercentrics first layer becomes the Largest Contentful Paint.</p>
 </div>
 
 </body>
