--- a/index.html
+++ b/index.html
@@ -29,68 +29,56 @@
 <!-- Workaround: split privacy text into paragraphs -->
 <script>
 (function() {
-  function splitPrivacyText(shadow) {
-    // tentar encontrar o span com o texto legal
-    const span = shadow.querySelector('#uc-privacy-description .privacy-text-detailed');
-    if (!span) {
-      console.log('[UC-LCP-FIX] privacy-text-detailed not found in this shadowRoot');
-      return;
-    }
+  console.log("[UC-LCP-FIX] Workaround script loaded");
 
-    // evitar processar duas vezes
-    if (span.innerHTML.includes('<p')) {
-      console.log('[UC-LCP-FIX] Text already split, skipping');
-      return;
-    }
-
-    const original = span.textContent.trim();
-    if (!original) {
-      console.log('[UC-LCP-FIX] Empty privacy text, nothing to split');
-      return;
-    }
-
-    console.log('[UC-LCP-FIX] Original text length:', original.length);
-
-    // dividir por frases (. ! ?)
-    const sentences = original.split(/(?<=[.!?])\s+/);
-    console.log('[UC-LCP-FIX] Sentences:', sentences.length);
-
-    span.innerHTML = sentences
-      .map(s => `<p style="margin:0 0 10px 0; line-height:1.35;">${s}</p>`)
-      .join('');
-
-    console.log('[UC-LCP-FIX] Privacy text successfully split into paragraphs');
-  }
-
-  function applyOverride() {
-    const host = document.querySelector('.uc-embed');
+  function tryApplyFix() {
+    const host = document.querySelector("aside#usercentrics-cmp-ui");
     if (!host || !host.shadowRoot) {
-      console.log('[UC-LCP-FIX] .uc-embed host or shadowRoot not ready');
+      console.log("[UC-LCP-FIX] shadowRoot not ready yet");
       return;
     }
 
     const shadow = host.shadowRoot;
-    splitPrivacyText(shadow);
+    const target = shadow.querySelector("#uc-privacy-description .privacy-text-detailed");
 
-    // observar alterações internas ao shadowRoot (re-render do CMP)
-    new MutationObserver(() => splitPrivacyText(shadow))
-      .observe(shadow, { childList: true, subtree: true });
+    if (!target) {
+      console.log("[UC-LCP-FIX] privacy-text-detailed not found yet");
+      return;
+    }
+
+    console.log("[UC-LCP-FIX] Element found — applying workaround");
+
+    target.textContent = "This is the modified text used for LCP testing.";
+
+    // Observe future updates from Usercentrics
+    new MutationObserver(() => {
+      const t = shadow.querySelector("#uc-privacy-description .privacy-text-detailed");
+      if (t && t.textContent !== "This is the modified text used for LCP testing.") {
+        console.log("[UC-LCP-FIX] Detected Usercentrics update → Reapplying text");
+        t.textContent = "This is the modified text used for LCP testing.";
+      }
+    }).observe(shadow, { childList: true, subtree: true });
+
   }
 
-  // correr quando o DOM estiver pronto
-  if (document.readyState === 'loading') {
-    document.addEventListener('DOMContentLoaded', applyOverride);
-  } else {
-    applyOverride();
-  }
+  // Try frequently until UC finishes loading
+  const interval = setInterval(() => {
+    tryApplyFix();
+  }, 200);
 
-  // observar o DOM principal para quando .uc-embed aparecer
-  new MutationObserver(() => applyOverride())
-    .observe(document.documentElement, { childList: true, subtree: true });
+  // Stop trying once it works
+  const stopWhenReady = setInterval(() => {
+    const host = document.querySelector("aside#usercentrics-cmp-ui");
+    if (host && host.shadowRoot && host.shadowRoot.querySelector("#uc-privacy-description .privacy-text-detailed")) {
+      clearInterval(interval);
+      clearInterval(stopWhenReady);
+      console.log("[UC-LCP-FIX] Workaround fully activated");
+    }
+  }, 500);
 
-  console.log('[UC-LCP-FIX] Workaround script loaded (using .uc-embed)');
 })();
 </script>
+
 
 
 </head>
